[package]
name = "ah-scrape"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.216", features = ["derive"] }
tokio = {version="1.42.0",  features = ["full"] }
mockito = "1.6.1"
serde_json = "1.0.134"
base64 = "0.22.1"
chrono = "0.4.39"
zstd = "0.13.2"
sha256 = "1.5.0"